Pass through audio if HRTF database isn't loaded yet.

If the HRTF panner isn't loaded yet, instead of zeroing the output,
copy the input to the output so that some audio is heard.  In either
case, there is a potential for a glitch, but it seems better to have
some audio output instead of silence.

The previous worst case was if loading the database is slow and the
sound is short, you won't hear anything.  Now you will.  If the sound
is long enough, you previously would hear silence and suddenly a
sound. Now you'll hear the sound which would suddenly change to due
spatialization.  We deem this to be less troublesome that not hearing the
initial sound at all.

BUG=629858
TEST=Run test from 602668 and audio from the first instance should be
heard

Review-Url: https://codereview.chromium.org/2168653003
Cr-Commit-Position: refs/heads/master@{#406638}

Former-commit-id: dec7ebfb35299bc15a0bc222dea7838b04d2c469